--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+/* a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
+.active {
+  font-weight: bold;
+} */
