highlight link to active page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
   </head>
 
   <body>
-    <%= link_to 'landing_page', static_pages_landing_page_path %>
-    <%= link_to 'about', static_pages_about_path %>
-    <%= link_to 'terms', static_pages_terms_path %>
-    <%= link_to 'privacy', static_pages_privacy_path %>
-    <%= link_to 'pricing', static_pages_pricing_path %>
+    <%#= active_link_to 'landing_page', static_pages_landing_page_path, class: "#{'active' if current_page?(static_pages_landing_page_path)}" %>
+    <%= active_link_to 'landing_page', static_pages_landing_page_path %>
+    <%= active_link_to static_pages_about_path do %>
+      about
+    <% end %>
+    <%= active_link_to 'terms', static_pages_terms_path %>
+    <%= active_link_to 'privacy', static_pages_privacy_path %>
+    <%= active_link_to 'pricing', static_pages_pricing_path %>
     <%= yield %>
   </body>
 </html>
