--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-/* a {
+a {
   text-decoration: none;
 }
 
@@ -24,4 +24,4 @@ a:visited {
 
 .active {
   font-weight: bold;
-} */
+}
